--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   supabase_flutter: ^2.8.4
   google_fonts: ^6.2.1
+  image_picker: ^1.1.2
+  intl: ^0.20.2
   flutter_svg: ^2.0.17
 
 dev_dependencies:
